# every

./: Cargo.toml  LICENSE  README.md
src/: args.rs  help.rs  main.rs  tick.rs
tests/: cli.rs  helpers.rs
