[package]
name = "every"
version = "0.1.0"
edition = "2021"
description = "Run a command every N seconds."
documentation = "https://github.com/BenMorel/every"
homepage = "https://github.com/BenMorel/every"
repository = "https://github.com/BenMorel/every"
authors = ["Benjamin Morel <benjamin.morel@gmail.com>"]
readme = "README.md"
license = "MIT"

[dependencies]
regex = "1.11.0"

[dev-dependencies]
assert_cmd = "2.0.16"
nix = { version = "0.29.0", features = ["signal"] }
predicates = "3.1.2"
